Logo alignment issue

--- a/layouts/fask/skins/vtiger/common.css
+++ b/layouts/fask/skins/vtiger/common.css
@@ -87,7 +87,7 @@ body {
     display: inline-block;
     width: 150px;
     z-index: 2;
-    padding-left: 6%;
+ /*   padding-left: 6%;*/
     margin-top: 1px;
   }
   .app-nav .module-action-bar {
